feat: Enable real sentiment data with multiple sources, fix UI scrolling, improve fund-specific sentiment analysis, prepare for production deployment on Render

--- a/.env
+++ b/.env
@@ -1,24 +1,9 @@
-# Database Configuration
+USE_REAL_DATA=True
+ENABLE_LIVE_TRADING=True
+TRADE_SIZE_LIMIT=50000.0
+DAILY_SPEND_LIMIT=250000.0
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=halan_invest
 DB_USER=user
 DB_PASSWORD=password
-DB_NAME=halan_invest
-DB_HOST=db
-DB_PORT=5432
-
-# Backend Configuration
-PYTHON_ENV=development
-DEBUG=True
-
-# Frontend Configuration
-REACT_APP_API_URL=http://localhost:8000/api
-
-# API Keys (add your real keys here when ready)
-TWITTER_API_KEY=your_twitter_api_key_here
-TWITTER_API_SECRET=your_twitter_api_secret_here
-FARCASTER_API_KEY=your_farcaster_api_key_here
-THNDR_API_KEY=your_thndr_api_key_here
-
-# Trading Configuration (use with extreme caution)
-ENABLE_LIVE_TRADING=False
-TRADE_SIZE_LIMIT=1000
-SLIPPAGE_TOLERANCE=0.5
