--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ DB_PORT=5432
 # Backend Configuration
 PYTHON_ENV=development
 DEBUG=True
+USE_REAL_DATA=True
 
 # Frontend Configuration
 REACT_APP_API_URL=http://localhost:8000/api
