--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     ports:
       - "5432:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-user} -d ${DB_NAME:-halan_invest}"]
+      test: [ "CMD-SHELL", "pg_isready -U ${DB_USER:-user} -d ${DB_NAME:-halan_invest}" ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -26,6 +26,7 @@ services:
     environment:
       DATABASE_URL: postgresql://${DB_USER:-user}:${DB_PASSWORD:-password}@db:5432/${DB_NAME:-halan_invest}
       PYTHON_ENV: development
+      USE_REAL_DATA: "True"
     ports:
       - "8000:8000"
     depends_on:
@@ -52,6 +53,7 @@ services:
 
 volumes:
   postgres_data:
+
 
 networks:
   default:
